--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "url": "https://github.com/Teuzzxz/backend-Reiseletrica/issues"
   },
   "homepage": "https://github.com/Teuzzxz/backend-Reiseletrica#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.0"
+  }
 }
